# Quack-Compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
builtins/: builtins.c  builtins.h
generated-code/: tree.c  tree.qk  vector.c  vector.qk
samples/: GoodWalk.qk  LexChallenge.qk  PtBadSyntax.qk  TypeWalk.qk  bad_break.qk  not_a_duck.qk  starter_parsable.qk
src/: all.hpp  ast_node.cpp  ast_node.hpp  attribute_parser.cpp  attribute_parser.hpp  contexts.cpp  contexts.hpp  driver.cpp  driver.hpp  environment.cpp  environment.hpp  errors.cpp  errors.hpp  helper_assign.cpp  helper_assign.hpp  helper_class.cpp  helper_class.hpp  helper_method.cpp  helper_method.hpp  main.cpp  msg.cpp  msg.hpp  qk.lpp  qk.ypp  qk_builtins.cpp  qk_builtins.hpp  small-test.qk  stack.cpp  stack.hpp  symtable.cpp  symtable.hpp
test-case/: test.sh
test-case/bads/: attributes_not_initialized.qk  bad_assign.qk  bad_attr.qk  bad_attr2.qk  bad_attr3.qk  bad_construct.qk  bad_construct2.qk  bad_if.qk  bad_if_var.qk  bad_init.qk  bad_init2.qk  bad_init3.qk  bad_init4.qk  bad_init5.qk  bad_method.qk  bad_return.qk  bad_return2.qk  bad_return3.qk  bad_return4.qk  bad_static_declare.qk  bad_static_declare2.qk  bad_typecase.qk  circular_inheritance.qk  overload.qk  reserved_word1.qk  reserved_word2.qk
test-case/goods/: good_assign.qk  good_assign2.qk  good_call.qk  good_init.qk  good_init2.qk  good_init3.qk  good_override.qk  good_static_declare.qk  good_typecase.qk  point.qk  tree.qk
